[gd_scene load_steps=14 format=3 uid="uid://cgcwuidlm66nx"]

[ext_resource type="PackedScene" uid="uid://bv416dkmr8kkh" path="res://Boat/GLB_Exports/Door/door.glb" id="1_1w8ll"]
[ext_resource type="Material" uid="uid://mvkocgcisxd1" path="res://Boat/Scenes/Materials/door_mat.tres" id="2_135lh"]
[ext_resource type="Script" path="res://Boat/InteractiveScenes/Animations/DoorAnimation.gd" id="2_ytng8"]
[ext_resource type="Material" uid="uid://y7nskv64io8j" path="res://Boat/Scenes/Materials/door_metal_parts.tres" id="3_mesnx"]
[ext_resource type="PackedScene" uid="uid://bi8ebqsm3obsa" path="res://InteractableSystem/Interactable.tscn" id="6_hf7a0"]
[ext_resource type="AudioStream" uid="uid://fmpl5sc2vusc" path="res://Sound/Props/Door/door_open.wav" id="7_37gx6"]
[ext_resource type="Material" uid="uid://cumyd1eymbym" path="res://Boat/Scenes/Materials/glass_mat.tres" id="7_un6qr"]
[ext_resource type="AudioStream" uid="uid://diqlea6hkikg4" path="res://Sound/Props/Door/door_close.wav" id="8_5vuay"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_ql1e2"]
points = PackedVector3Array(0.0331434, -0.0557733, 0.1097, -3.40853, -5.30023, -0.136134, -3.34454, -5.20273, 0.1097, -3.40853, 0.0417342, -0.136134, 0.0971327, -5.30023, -0.136134, 0.0971327, 0.0417342, -0.136134, 0.0331434, -5.20273, 0.1097, -3.34454, -0.0557733, 0.1097)

[sub_resource type="BoxShape3D" id="BoxShape3D_8bs31"]
size = Vector3(3.48792, 5.54297, 0.430786)

[sub_resource type="Animation" id="Animation_ov28a"]
resource_name = "close_door"
length = 1.5
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Door/HandleOutside")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 1, 4.37114e-08, 0.1, 1, 0, 0, 0.988494, 0.151261, 0.3, 1, 0, 0, 1, -4.37114e-08)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Door")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, -0.737277, 0, 0.67559, 0.2, 1, 0, -0.737277, 0, 0.67559, 1.4, 1, 0, 0.0436194, 0, 0.999048, 1.5, 1, 0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_mdm6t"]
resource_name = "open_door"
length = 1.5
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Door")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0.4, 1, 0, 0, 0, 1, 1.1, 1, 0, -0.766044, 0, 0.642788, 1.5, 1, 0, -0.737277, 0, 0.67559)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Door/HandleOutside")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 0, 1, 2.8213e-07, 0.2, 1, 0, 0, 0.993879, 0.110472, 0.4, 1, 0, 0, 1, -4.37114e-08)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8qrrr"]
_data = {
"close_door": SubResource("Animation_ov28a"),
"open_door": SubResource("Animation_mdm6t")
}

[node name="door" instance=ExtResource("1_1w8ll")]
script = ExtResource("2_ytng8")

[node name="Door" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 19.3612, 5.32221, 4.10729)
surface_material_override/0 = ExtResource("2_135lh")

[node name="HandleOutside" parent="Door" index="0"]
transform = Transform3D(-1, 1.50996e-07, 0, -1.50996e-07, -1, 0, 0, 0, 1, -3.06708, -2.69536, 0.103404)
surface_material_override/0 = ExtResource("3_mesnx")

[node name="HandleInside" parent="Door/HandleOutside" index="0"]
surface_material_override/0 = ExtResource("3_mesnx")

[node name="Porthole" parent="Door" index="1"]
surface_material_override/0 = ExtResource("3_mesnx")

[node name="PortholeWindow" parent="Door" index="2"]
surface_material_override/0 = ExtResource("7_un6qr")

[node name="StaticBody3D" type="StaticBody3D" parent="Door" index="3"]
transform = Transform3D(-0.0871555, 0, 0.996195, 0, 1, 0, -0.996195, 0, -0.0871555, -2.40422, -5.32221, 19.6455)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Door/StaticBody3D" index="0"]
transform = Transform3D(-0.0871555, 0, -0.996195, 0, 1, 0, 0.996195, 0, -0.0871555, 19.3612, 5.32221, 4.10729)
shape = SubResource("ConvexPolygonShape3D_ql1e2")

[node name="Interactable" parent="Door" index="4" node_paths=PackedStringArray("interaction_shape") instance=ExtResource("6_hf7a0")]
ship_scale = true
prompt_offset = 0.0
interaction_shape = NodePath("CollisionShape3D")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Door/Interactable" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.65006, -2.66353, -0.0622234)
shape = SubResource("BoxShape3D_8bs31")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="1"]
libraries = {
"": SubResource("AnimationLibrary_8qrrr")
}

[node name="OpenDoorSound" type="AudioStreamPlayer3D" parent="." index="2"]
stream = ExtResource("7_37gx6")
bus = &"Environment"

[node name="CloseDoorSound" type="AudioStreamPlayer3D" parent="." index="3"]
stream = ExtResource("8_5vuay")

[connection signal="interact" from="Door/Interactable" to="." method="_on_interactable_interact"]
